--- a/index.html
+++ b/index.html
@@ -1,33 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>REVENGE MAGAZINE</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #000;
-      color: #fff;
-      text-align: center;
-      padding-top: 20vh;
-    }
-    h1 {
-      font-size: 2rem;
-    }
-    p {
-      font-size: 1.2rem;
-      opacity: 0.8;
-    }
-  </style>
-</head>
-<body>
-  <h1>REVENGE MAGAZINE AR Experience</h1>
-  <p>This AR experience will be live soon!! Stay tuned!</p>
-  <ul>
-    <li>Instagram: @jjphobic</li>
-    <li>Website (Live Soon): jjbantunes.com</li>
-    <li>Tiktok: @jjphobicc</li>
-    <li>Youtube: @jjphobic</li>
-  </ul>
-</body>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const videos = document.querySelectorAll("video");
+        videos.forEach((video) => {
+          video.play().catch((error) => {
+            console.warn("Autoplay failed:", error);
+          });
+        });
+      });
+    </script>
+  </head>
+  <body>
+    <a-scene 
+      mindar-image="imageTargetSrc: ./Assets/targets.mind;" 
+      color-space="sRGB" 
+      renderer="colorManagement: true, physicallyCorrectLights, useLegacyLights: false" 
+      vr-mode-ui="enabled: false" 
+      device-orientation-permission-ui="enabled: false">
+
+      <a-assets>
+        <video id="issue1" src="./Assets/issue1.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue2" src="./Assets/issue2.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue3" src="./Assets/issue3.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue4" src="./Assets/issue4.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue5" src="./Assets/issue5.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue6" src="./Assets/issue6.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue7" src="./Assets/issue7.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue8" src="./Assets/issue8.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue9" src="./Assets/issue9.mp4" autoplay loop muted playsinline preload="auto"></video>
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="true"></a-camera>
+
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-video src="#issue1" position="0 0 0" width="1.5" height="2"></a-video>
+      </a-entity>
+      <a-entity mindar-image-target="targetIndex: 1">
+        <a-video src="#issue2" position="0 0 0" width="1.5" height="2"></a-video>
+      </a-entity>
+      <a-entity mindar-image-target="targetIndex: 2">
+        <a-video src="#issue3" position="0 0 0" width="1.5" height="2"></a-video>
+      </a-entity>
+      <a-entity mindar-image-target="targetIndex: 3">
+        <a-video src="#issue4" position="0 0 0" width="1.5" height="2"></a-video>
+      </a-entity>
+      <a-entity mindar-image-target="targetIndex: 4">
+        <a-video src="#issue5" position="0 0 0" width="1.5" height="2"></a-video>
+      </a-entity>
+      <a-entity mindar-image-target="targetIndex: 5">
+        <a-video src="#issue6" position="0 0 0" width="1.5" height="2"></a-video>
+      </a-entity>
+      <a-entity mindar-image-target="targetIndex: 6">
+        <a-video src="#issue7" position="0 0 0" width="1.5" height="2"></a-video>
+      </a-entity>
+      <a-entity mindar-image-target="targetIndex: 7">
+        <a-video src="#issue8" position="0 0 0" width="1.5" height="2"></a-video>
+      </a-entity>
+      <a-entity mindar-image-target="targetIndex: 8">
+        <a-video src="#issue9" position="0 0 0" width="1.5" height="2"></a-video>
+      </a-entity>
+
+    </a-scene>
+  </body>
 </html>
+
