--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <a-scene 
       mindar-image="imageTargetSrc: ./Assets/targets.mind;" 
       color-space="sRGB" 
-      renderer="colorManagement: true, physicallyCorrectLights, useLegacyLights: false" 
+      renderer="colorManagement: true, physicallyCorrectLights: true" 
       vr-mode-ui="enabled: false" 
       device-orientation-permission-ui="enabled: false">
 
       <a-assets>
+        <!-- Ensure these files exist in the Assets folder -->
         <video id="issue1" src="./Assets/issue1.mp4" autoplay loop muted playsinline preload="auto"></video>
         <video id="issue2" src="./Assets/issue2.mp4" autoplay loop muted playsinline preload="auto"></video>
         <video id="issue3" src="./Assets/issue3.mp4" autoplay loop muted playsinline preload="auto"></video>
@@ -34,7 +35,7 @@
         <video id="issue9" src="./Assets/issue9.mp4" autoplay loop muted playsinline preload="auto"></video>
       </a-assets>
 
-      <a-camera position="0 0 0" look-controls="true"></a-camera>
+      <a-camera position="0 0 0" look-controls></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
         <a-video src="#issue1" position="0 0 0" width="1.5" height="2"></a-video>
