Updated video references to use mobile-optimized files

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <video id="issue1" src="./Assets/issue1.mp4" autoplay loop muted playsinline preload="auto"></video>
         <video id="issue2" src="./Assets/issue2.mp4" autoplay loop muted playsinline preload="auto"></video>
         <video id="issue3" src="./Assets/issue3.mp4" autoplay loop muted playsinline preload="auto"></video>
-        <video id="issue4" src="./Assets/issue4.mp4" autoplay loop muted playsinline preload="auto"></video>
-        <video id="issue5" src="./Assets/issue5.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue4" src="./Assets/reexported_issue4.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue5" src="./Assets/reexported_issue5.mp4" autoplay loop muted playsinline preload="auto"></video>
         <video id="issue6" src="./Assets/issue6.mp4" autoplay loop muted playsinline preload="auto"></video>
-        <video id="issue7" src="./Assets/issue7.mp4" autoplay loop muted playsinline preload="auto"></video>
+        <video id="issue7" src="./Assets/reexported_issue7.mp4" autoplay loop muted playsinline preload="auto"></video>
         <video id="issue8" src="./Assets/issue8.mp4" autoplay loop muted playsinline preload="auto"></video>
         <video id="issue9" src="./Assets/issue9.mp4" autoplay loop muted playsinline preload="auto"></video>
       </a-assets>
